# monad-execution-gateway

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVENTS.md
examples/: monitor-contention.ts  subscribe-blocks.ts  track-lifecycle.ts  track-storage.ts  websocket-test.sh
gateway/: Cargo.toml  Dockerfile  Dockerfile_build_and_publish  build.sh  restricted_filters.json
gateway/src/: lib.rs
gateway/src/lib/: block_lifecycle.rs  contention_tracker.rs  event_filter.rs  event_listener.rs  metrics.rs  serializable_event.rs  server.rs  top_k_tracker.rs
sdk/python/: pyproject.toml
sdk/python/monad_execution_events/: __init__.py  client.py  types.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
webhook-relay/: package-lock.json  package.json  tsconfig.json
webhook-relay/src/: index.ts
