[package]
name = "execution-events-gateway"
version = "0.1.0"
edition = "2021"
description = "Community-maintained public Execution Events Gateway for Monad builders"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Web framework + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# WebSocket client (used by client binary)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Blockchain types
alloy-primitives = { version = "0.8", features = ["serde"] }

# CLI
clap = { version = "4.2", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# Utilities
chrono = "0.4.34"
lazy_static = "1.5.0"
anyhow = "1.0.100"

[dependencies.monad-exec-events]
git = "https://github.com/category-labs/monad-bft"
tag = "release/exec-events-sdk-v1.0"

[dependencies.monad-event-ring]
git = "https://github.com/category-labs/monad-bft"
tag = "release/exec-events-sdk-v1.0"
