[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monad-execution-events"
version = "0.1.0"
description = "Python SDK for Monad Execution Events Gateway"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["monad", "blockchain", "execution-events", "websocket"]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]
